[gd_scene load_steps=11 format=3 uid="uid://b7lyyuxmm1x5b"]

[ext_resource type="Script" path="res://node/dead_menu.gd" id="1_3sy1t"]
[ext_resource type="Texture2D" uid="uid://c6mrrkxekgwog" path="res://assets/instruction/HUD Text Box.png" id="2_2baur"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_owk2v"]
texture = ExtResource("2_2baur")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b3yek"]
bg_color = Color(0.1312, 0.275247, 0.41, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0rnkm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_er8m2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qn4tv"]
bg_color = Color(0.2145, 0.65, 0.5629, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwlaf"]
bg_color = Color(0.129412, 0.27451, 0.411765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnm52"]
bg_color = Color(0.0980392, 0.207843, 0.309804, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="FontVariation" id="FontVariation_gc57k"]
fallbacks = Array[Font]([null])

[node name="DeadMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -696.0
offset_right = -245.0
offset_bottom = -696.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.10267, 3.3481)
script = ExtResource("1_3sy1t")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(14.3013, 6.10873)
theme_override_styles/panel = SubResource("StyleBoxTexture_owk2v")

[node name="Button" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 45.3445
offset_top = 129.327
offset_right = 250.344
offset_bottom = 205.327
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.35448, 0.736674)
theme_override_styles/focus = SubResource("StyleBoxFlat_b3yek")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_0rnkm")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_er8m2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_qn4tv")
theme_override_styles/hover = SubResource("StyleBoxFlat_xwlaf")
theme_override_styles/normal = SubResource("StyleBoxFlat_jnm52")
text = "RESTART"

[node name="Button2" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 47.1583
offset_top = 68.397
offset_right = 252.158
offset_bottom = 144.397
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.35448, 0.736674)
theme_override_styles/focus = SubResource("StyleBoxFlat_b3yek")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_0rnkm")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_er8m2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_qn4tv")
theme_override_styles/hover = SubResource("StyleBoxFlat_xwlaf")
theme_override_styles/normal = SubResource("StyleBoxFlat_jnm52")
text = "REVIVE"

[node name="Button3" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 196.795
offset_top = 196.828
offset_right = 366.795
offset_bottom = 247.828
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.11698, 0.542707)
theme_override_fonts/font = SubResource("FontVariation_gc57k")
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxFlat_b3yek")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_0rnkm")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_er8m2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_qn4tv")
theme_override_styles/hover = SubResource("StyleBoxFlat_xwlaf")
theme_override_styles/normal = SubResource("StyleBoxFlat_jnm52")
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 189.54
offset_top = 18.518
offset_right = 388.54
offset_bottom = 68.518
theme_override_font_sizes/font_size = 36
text = "YOU DIED!!!"

[connection signal="pressed" from="Button" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_revive_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_exitpressed"]
